--- a/echo/plugin/EchoPlugin/plugin.xml
+++ b/echo/plugin/EchoPlugin/plugin.xml
@@ -1,7 +1,2 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="rs-plugin-echo" version="0.0.1" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
-    <name>EchoPlugin</name>
-    <js-module name="EchoPlugin" src="www/EchoPlugin.js">
-        <clobbers target="cordova.plugins.EchoPlugin" />
-    </js-module>
-</plugin>
+<plugin id="rs-plugin-echo" version="0.0.1" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android"><name>EchoPlugin</name><js-module name="EchoPlugin" src="www/EchoPlugin.js"><clobbers target="cordova.plugins.EchoPlugin" /></js-module><platform name="android"><config-file parent="/*" target="res/xml/config.xml"><feature name="EchoPlugin"><param name="android-package" value="rs-plugin-echo.EchoPlugin" /></feature></config-file><config-file parent="/*" target="AndroidManifest.xml"></config-file><source-file src="src/android/EchoPlugin.java" target-dir="src/rs-plugin-echo/EchoPlugin" /></platform></plugin>
