added link to echo plugin folder using cordova plugin add --link

--- a/echo/host/EchoApp/package.json
+++ b/echo/host/EchoApp/package.json
@@ -13,11 +13,13 @@
   "author": "Apache Cordova Team",
   "license": "Apache-2.0",
   "devDependencies": {
-    "cordova-plugin-whitelist": "^1.3.4"
+    "cordova-plugin-whitelist": "^1.3.4",
+    "ls": "file:../../plugin/EchoPlugin"
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-whitelist": {}
+      "cordova-plugin-whitelist": {},
+      "rs-plugin-echo": {}
     },
     "platforms": [
       "android"
