--- a/echo/host/package.json
+++ b/echo/host/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "au.com.codesmurf.echoapp",
-  "displayName": "EchoApp",
+  "name": "com.rs.echo.host",
+  "displayName": "HostApp",
   "version": "1.0.0",
   "description": "A sample Apache Cordova application that responds to the deviceready event.",
   "main": "index.js",
@@ -13,19 +13,15 @@
   "author": "Apache Cordova Team",
   "license": "Apache-2.0",
   "devDependencies": {
-    "cordova-plugin-whitelist": "^1.3.4",
-    "ls": "file:../../plugin/EchoPlugin"
+    "cordova-android": "^9.1.0",
+    "cordova-plugin-whitelist": "^1.3.4"
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-whitelist": {},
-      "rs-plugin-echo": {}
+      "cordova-plugin-whitelist": {}
     },
     "platforms": [
       "android"
     ]
-  },
-  "dependencies": {
-    "cordova-android": "9.1.0"
   }
 }
