--- a/echo/plugin/EchoPlugin/plugin.xml
+++ b/echo/plugin/EchoPlugin/plugin.xml
@@ -1,2 +1,21 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="rs-plugin-echo" version="0.0.1" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android"><name>EchoPlugin</name><js-module name="EchoPlugin" src="www/EchoPlugin.js"><clobbers target="cordova.plugins.EchoPlugin" /></js-module><platform name="android"><config-file parent="/*" target="res/xml/config.xml"><feature name="EchoPlugin"><param name="android-package" value="rs-plugin-echo.EchoPlugin" /></feature></config-file><config-file parent="/*" target="AndroidManifest.xml"></config-file><source-file src="src/android/EchoPlugin.java" target-dir="src/rs-plugin-echo/EchoPlugin" /></platform></plugin>
+<plugin id="rs-plugin-echo" version="0.0.3"
+    xmlns="http://apache.org/cordova/ns/plugins/1.0"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <name>EchoPlugin</name>
+    <js-module name="EchoPlugin" src="www/EchoPlugin.js">
+        <clobbers target="cordova.plugins.EchoPlugin" />
+    </js-module>
+     <engines>
+      <engine name="cordova-android" version=">=4.0.0" />
+    </engines>
+    <platform name="android">
+        <config-file parent="/*" target="res/xml/config.xml">
+            <feature name="EchoPlugin">
+                <param name="android-package" value="au.com.rs.plugins.EchoPlugin" />
+            </feature>
+        </config-file>
+        <config-file parent="/*" target="AndroidManifest.xml"></config-file>
+        <source-file src="src/android/EchoPlugin.java" target-dir="src/au/com/rs/plugins" />
+    </platform>
+</plugin>
