--- a/echo/.gitignore
+++ b/echo/.gitignore
@@ -82,4 +82,9 @@ lint/intermediates/
 lint/generated/
 lint/outputs/
 lint/tmp/
-# lint/reports/
+lint/reports/
+
+# android sdk
+host/
+platforms/
+
