added ios platform to all plugins and app

--- a/echo/plugin/EchoPlugin/package.json
+++ b/echo/plugin/EchoPlugin/package.json
@@ -5,7 +5,7 @@
   "cordova": {
     "id": "rs-plugin-echo",
     "platforms": [
-      "android"
+      "android", "ios"
     ]
   },
   "repository": {
