ios spa working using a full screen modal. note that page2.html loads

--- a/echo/plugin/SpaPlugin/plugin.xml
+++ b/echo/plugin/SpaPlugin/plugin.xml
@@ -32,5 +32,7 @@
             </feature>
         </config-file>
         <source-file src="src/ios/SpaPlugin.m" />
+        <source-file src="src/ios/SpaViewController.m"/>
+        <asset src="src/sites" target="sites" />
     </platform>
 </plugin>
